adding color to backgrounds

--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@ hopefully centering most things'll still be easy to navigate
 even after minimizing/maximizing the screen or using the app on
 a phone
 
-if image functionality is something we wanna pursue later in the project,
-a handy preset has already been established-->
+-->
 <style>
 div.jumbotron {
 	text-align: center;
+	font-family: Tahoma;
 	color: tomato;
-}
-
-img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	background-color: gainsboro;
 }
 
 </style>
@@ -34,8 +29,8 @@ img {
 
 	<!-- this is the title of the webpage-->
 <div class="jumbotron" style="margin-bottom:0">
-	<h1 style="font-family:Tahoma">Dungeon Daddy Initiative Tracker</h1>
-	<p style="color:red">Super cool initiative tracker!!!</p>
+	<h1>Dungeon Daddy Initiative Tracker</h1>
+	<p style="background-color: blanchedalmond">Super cool initiative tracker!!!</p>
 </div>
 
 	<!-- most of how the init list is displayed can be found in main.css-->
