added player interfaces, added more DM interfaces

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 </head>
 
+<!-- IMPORTANTISIMO: THIS IS THE DM'S SCREEN SHOULDN'T BE THE HOMESCREEN
+
+I AM TRYING TO FIX IT
+-EAVI
+-->
+
 <!-- this is where we set up useful parameters
 to ease user navigation 
 hopefully centering most things'll still be easy to navigate
