--- a/player/index.html
+++ b/player/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Player lobby</title>
+        <title>Player Lobby | Dungeon Daddy</title>
         <link rel="stylesheet" href="css/lobby.css">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+
+    <!--This is the html file responsible for the waiting screen
+    for the players
+    
+    what's supposed to happen is that the DM makes a session
+    and players who log in will be directed to this page
+    until the DM closes the lobby-->
+
     <body>
         <h1 id="title1">Waiting for host to start game</h1>
-        <!-- I think this is where the backend people put in
-        the connect-y things to the server to prompt the player's
-        view-->
+        
     </body>
+    <!-- I think this is where the backend people put in
+    the connect-y things to the server to prompt the player's
+    view with script src...-->
 
 </html>
