Put DM screen in its proper place

--- a/DM/index.html
+++ b/DM/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Host | Dungeon Daddy</title>
-        <link rel="stylesheet" href="css/host.css">
+        <link rel="stylesheet" href="../css/host.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
