--- a/index.html
+++ b/index.html
@@ -1,50 +1,5 @@
+<!-- THIS IS SUPPOSED TO BE THE MAIN HOMESCREEN PAGE-->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Dungeon Daddy Initialization Tracker</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-	<link rel="stylesheet" href="css/main.css">
+<html>
 
-</head>
-
-<!-- IMPORTANTISIMO: THIS IS THE DM'S SCREEN SHOULDN'T BE THE HOMESCREEN
-
-I AM TRYING TO FIX IT
--EAVI
--->
-
-<!-- this is where we set up useful parameters
-to ease user navigation 
-hopefully centering most things'll still be easy to navigate
-even after minimizing/maximizing the screen or using the app on
-a phone
-
--->
-<style>
-div.jumbotron {
-	text-align: center;
-	font-family: Tahoma;
-	color: tomato;
-	background-color: gainsboro;
-}
-
-</style>
-<body>
-
-	<!-- this is the title of the webpage-->
-<div class="jumbotron" style="margin-bottom:0">
-	<h1>Dungeon Daddy Initiative Tracker</h1>
-	<p style="background-color: blanchedalmond">Super cool initiative tracker!!!</p>
-</div>
-
-	<!-- most of how the init list is displayed can be found in main.css-->
-	<div class="kanban"></div>
-	<script src="js/main.js" type="module"></script>
-
-	<!-- no longer relevant, just testing image capacities
-	<img src="angieGuin.png" alt="angieGuin" width="460" height="345"> -->
-
-</body>
 </html>
