--- a/player/playerView/index.html
+++ b/player/playerView/index.html
@@ -21,7 +21,8 @@
     as a list of all fighters to one of the margins
 
     For now, the player sees the same as what the DM sees
-    except that players can't interact with anything
+    they shouldn't be able to interact with anything
+    but I'm having trouble doing that
 
     -EAVI
     -->
